Updated Form | Added Loading Page | Fixed Spacing Bugs

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -512,7 +512,8 @@ footer{
 }
 
 .add-a-recipe-div{
-  background-color: #F96C6D;
+  background-color: #F8f8f8;
+  background-size:cover;
   height:100vh;
   display:flex;
   justify-content: center;
@@ -520,18 +521,18 @@ footer{
 }
 .add-a-recipe-form{
   width:90%;
-  color:white;
+  color:#444444;
 }
 .add-a-recipe-input{
   width:100%;
   height:35px;
-  box-shadow:0 4px 4px rgba(0,0,0,.25);
+  box-shadow: 0 2px 7px rgba(50, 50, 50, 0.5);
   border:none;
   padding:0px 15px;
 }
 
 .add-a-recipe-title{
-  color:white;
+  color:#444444;
   margin-top:25px
 }
 
@@ -558,6 +559,7 @@ footer{
   border-radius:10px;
   padding:15px;
   margin-top:10px;
+  box-shadow: 0 2px 7px rgba(50, 50, 50, 0.5);
 }
 
 .add-a-recipe-ingredientsList, .add-a-recipe-instructionsList{
@@ -605,7 +607,6 @@ input::placeholder {
 .select-user{
   margin-bottom:5px;
   height:45px;
-
 }
 
 .or-div{
@@ -627,4 +628,36 @@ input::placeholder {
 .login-or{
   font-family:oswald;
   font-weight:semi-bold;
+}
+
+.loading-screen{
+  height:80vh;
+  background-color:#f8f8f8;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+}
+
+.loading-header{
+  color:#30B6BE;
+  font-family:oswald;
+  font-weight: semi-bold;
+}
+
+.loading-image{
+  animation:spin 2s;
+}
+
+@keyframes spin{
+  0%{
+    transform:rotate(-5deg)
+  }
+  100%{
+    transform:rotate(5deg);
+  }
+}
+
+.finding-available-ingredients{
+  color:#F96C6D
 }
